--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Bot to deliver everything socccer",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
